<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/main_menu_settings"/>
    <item
        android:id="@+id/main_menu_create"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/main_menu_create_meeting"/>
    <item
        android:id="@+id/main_menu_gps"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/main_menu_gps"/>
    <item
        android:id="@+id/main_menu_register"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/main_menu_register"/>
    <item
        android:id="@+id/main_menu_unregister"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/main_menu_unregister"/>

</menu>