<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FormStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <!-- Meeting's Name -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal" >

        <TextView
            style="@style/FormLabelStyle"
            android:layout_weight="1"
            android:text="@string/meeting_management_name" />

        <TextView
            android:id="@+id/meeting_data_name"
            style="@style/FormLabelStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:textIsSelectable="true" />
    </LinearLayout>

    <!-- Meeting's Date -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal" >

        <TextView
            style="@style/FormLabelStyle"
            android:layout_weight="1"
            android:text="@string/meeting_management_date" />

        <TextView
            android:id="@+id/meeting_data_date"
            style="@style/FormLabelStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:textIsSelectable="true" />
    </LinearLayout>

    <!-- Meeting's Time -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal" >

        <TextView
            style="@style/FormLabelStyle"
            android:layout_weight="1"
            android:text="@string/meeting_management_time" />

        <TextView
            android:id="@+id/meeting_data_time"
            style="@style/FormLabelStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:textIsSelectable="true" />
    </LinearLayout>

    <!-- Meeting's Location -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal" >

        <TextView
            style="@style/FormLabelStyle"
            android:layout_weight="2"
            android:text="@string/meeting_management_location" />

        <TextView
            android:id="@+id/meeting_data_location"
            style="@style/FormLabelStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="7"
            android:textIsSelectable="true" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/meeting_management_cDesc"
            android:onClick="setLocation"
            android:src="@android:drawable/ic_dialog_map" />
    </LinearLayout>

    <!-- Meeting's Share Location Time -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal" >

        <TextView
            style="@style/FormLabelStyle"
            android:layout_weight="2"
            android:text="@string/meeting_management_share_locations_time" />

        <TextView
            android:id="@+id/meeting_data_share_locations_time"
            style="@style/FormLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_vertical"
            android:textIsSelectable="true" />
    </LinearLayout>

    <!-- Meeting's Participants -->

    <LinearLayout
        style="@style/FormRowStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_view"
        android:orientation="horizontal"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/meeting_data_participants"
            style="@style/FormLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meeting_management_participants" />
    </LinearLayout>

        <Button
            android:id="@+id/meeting_data_attend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_green_button"
            android:onClick="commitAction"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/meeting_data_attend_button_text" />

        <Button
            android:id="@+id/meeting_data_decline_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_red_button"
            android:onClick="commitAction"
            android:text="@string/meeting_data_decline_button_text" />

</LinearLayout>